--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="#" class="navbar__item"></a>
         </div><input type="checkbox" style="display: none">
         <div class="navbar__items">
-          <a href="faq.html" class="navbar__item">FAQ</a> <a href="https://cdn.discordapp.com/attachments/1182775362338435102/1182964249321017424/Damned_setup.exe?ex=65869c4f&is=6574274f&hm=7df1899d2237d3f759564611555ced71744cf65544fbde23fc39dd3cce845315&" class="navbar__item navbar__item--highlighted">Download</a>
+          <a href="faq.html" class="navbar__item">FAQ</a> <a href="https://cdn.discordapp.com/attachments/1187386125103415360/1187391303303041124/damned_game_setup.exe?ex=6596b753&is=65844253&hm=30805e4d3a99805cc09cd0d036d75f1ec63a91af0823f55c599f4257b4e8d457&" class="navbar__item navbar__item--highlighted">Download</a>
         </div>
       </div>
     </nav>
@@ -49,7 +49,7 @@
               <h1 class="__section__heading">Damned</h1>
               <p class="__section__subheading">THE NEW ACTION-RPG MULTIPLAYER GAME...</p>
               <div class="__section__buttons">
-                <a href="#section-about" class="button button--secondary">Learn More</a> <a href="https://cdn.discordapp.com/attachments/1180913211453755492/1180980595539583137/GameSetup.exe?ex=657f64e3&amp;is=656cefe3&amp;hm=eb749e5149fd5b76de43e5e5423f7872a87af88992eeeb40f3bf01782fd9b8a4&amp;" class="button button--primary">Download Now</a>
+                <a href="#section-about" class="button button--secondary">Learn More</a> <a href="https://cdn.discordapp.com/attachments/1187386125103415360/1187391303303041124/damned_game_setup.exe?ex=6596b753&is=65844253&hm=30805e4d3a99805cc09cd0d036d75f1ec63a91af0823f55c599f4257b4e8d457&" class="button button--primary">Download Now</a>
               </div>
             </div>
           </div>
@@ -87,7 +87,7 @@
                 <h2 class="__section__heading">Download Now</h2>
                 <p class="__section__description">By downloading you agree to our <a href="eula.html">EULA</a> and <a href="privacy.html">Privacy Policy</a>.</p>
                 <div class="__section__buttons">
-                  <a href="https://cdn.discordapp.com/attachments/1182775362338435102/1182964249321017424/Damned_setup.exe?ex=65869c4f&is=6574274f&hm=7df1899d2237d3f759564611555ced71744cf65544fbde23fc39dd3cce845315&" class="button button--primary">Downloads</a>
+                  <a href="https://cdn.discordapp.com/attachments/1187386125103415360/1187391303303041124/damned_game_setup.exe?ex=6596b753&is=65844253&hm=30805e4d3a99805cc09cd0d036d75f1ec63a91af0823f55c599f4257b4e8d457&" class="button button--primary">Downloads</a>
                 </div>
               </div>
             </div>
@@ -102,7 +102,7 @@
             <div class="__footer__affiliation">A Subsidiary of Duck Block Games, TR</div>
           </div>
           <div class="__footer__icons">
-            <a href="https://cdn.discordapp.com/attachments/1182775362338435102/1182964249321017424/Damned_setup.exe?ex=65869c4f&is=6574274f&hm=7df1899d2237d3f759564611555ced71744cf65544fbde23fc39dd3cce845315&" class="footer__icon">
+            <a href="https://cdn.discordapp.com/attachments/1187386125103415360/1187391303303041124/damned_game_setup.exe?ex=6596b753&is=65844253&hm=30805e4d3a99805cc09cd0d036d75f1ec63a91af0823f55c599f4257b4e8d457&" class="footer__icon">
               <i class="fas fa-download fa-fw"></i>
             </a>
           </div>
